# hermes-panel

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  i18n.ts  shell.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  windows-installer.nsi
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  panel_v1.rs
src-tauri/windows/: installer-template.nsi
src/state/: sessionFilter.ts  shellSnapshot.ts
